[package]
name = "policy_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
hyperlight-wasm = "0.14.0"
hyperlight-component-macro = "0.14.0"
hyperlight-host = { version = "0.14.0", default-features = false }
hyperlight-common = { version = "0.14.0", default-features = false }
anyhow = "1"

[workspace]
