[package]
name = "auth_check"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.44", features = ["bitflags"] }

[package.metadata.component]
package = "demo:policy"

[package.metadata.component.target]
path = "../../wit"
world = "policy"

[profile.release]
codegen-units = 1
opt-level = "s"
strip = true
